Removed camera angles addition to position of turbah calculation

--- a/Turbah/ar.lproj/InfoPlist.strings
+++ b/Turbah/ar.lproj/InfoPlist.strings
@@ -7,5 +7,5 @@
 */
 
 "CFBundleDisplayName" = "تربة";
-"NSCameraUsageDescription" = "";
-"NSLocationWhenInUseUsageDescription" = "";
+"NSCameraUsageDescription" = "منح الصلاححية لتشغيل الواقع المعزز";
+"NSLocationWhenInUseUsageDescription" = "منح الصلاححية لتشغيل البوصلة";
